catalog gap fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
   padding: 50px 40px;
   display: grid;
   grid-template-columns: repeat(1, 200px);
-  gap: 48px 46px;
+  gap: 46px 48px;
   justify-items: center;
   justify-content: center;
 }
